<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.kerneldc</groupId>
	<artifactId>FlightLogServer</artifactId>
	<version>1.2.0-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>FlightLogServer</name>
	<description>Flight Log Server Application</description>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<relativePath /> <!-- lookup parent from repository -->
<!-- 		<version>2.0.3.RELEASE</version> -->
<!-- 		<version>2.1.7.RELEASE</version> -->
		<version>2.2.5.RELEASE</version>
	</parent>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>13</java.version>
		<deploy.folder>c:/temp</deploy.folder>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
		<timestamp>${maven.build.timestamp}</timestamp>
<!-- 		Downgrade maven-jar-plugin when upgrading to Spring Boot 2.1.5 -->
<!-- 		Why does change from Spring boot version 2.1.4 to 2.1.5 gives unknown configuration Maven error? -->
<!-- 		https://stackoverflow.com/questions/56154266/why-does-change-from-spring-boot-version-2-1-4-to-2-1-5-gives-unknown-configurat -->
<!-- 		Cannot import any project into Eclipse with maven-jar-plugin 3.1.2 -->
<!-- 		https://bugs.eclipse.org/bugs/show_bug.cgi?id=547340 -->
		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
		
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-rest</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
<!-- 			<version>3.7</version> -->
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-rest-hal-explorer</artifactId>
		</dependency>
<!-- 		<dependency> -->
<!-- 			<groupId>com.oracle</groupId> -->
<!-- 			<artifactId>ojdbc8</artifactId> -->
<!-- 			<version>19.3.0.0.0</version> -->
<!-- 		</dependency> -->
		<dependency>
			<groupId>com.oracle.ojdbc</groupId>
			<artifactId>ojdbc10</artifactId>
		</dependency>
		
		<dependency>
			<groupId>org.liquibase</groupId>
			<artifactId>liquibase-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-batch</artifactId>
		</dependency>
		<dependency>
			<groupId>commons-beanutils</groupId>
			<artifactId>commons-beanutils</artifactId>
			<version>1.9.3</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
		    <groupId>org.springframework.security</groupId>
		    <artifactId>spring-security-test</artifactId>
		    <scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.ulisesbocchio</groupId>
			<artifactId>jasypt-spring-boot-starter</artifactId>
			<version>2.1.0</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>27.0-jre</version>
		</dependency>
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-api</artifactId>
		    <version>0.10.5</version>
		</dependency>
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-impl</artifactId>
		    <version>0.10.5</version>
		    <scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.10.5</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<optional>true</optional>
		</dependency>		

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>fop</artifactId>
			<version>2.4</version>
	        <exclusions>
	            <exclusion>
	                <artifactId>xalan</artifactId>
	                <groupId>xalan</groupId>
	            </exclusion>
	            <exclusion>
	            	<groupId>xml-apis</groupId>
	            	<artifactId>xml-apis</artifactId>
	            </exclusion>
	        </exclusions>
        </dependency>

<dependency>
    <groupId>com.fasterxml.jackson.datatype</groupId>
    <artifactId>jackson-datatype-hibernate5</artifactId>
<!--     <version>2.8.4</version> -->
</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<tagBase>https://github.com/thalabi/FlightLogServer/releases</tagBase>
				</configuration>
			</plugin>

<!-- 		Added to resolve 'javadoc: error - class file for javax.interceptor.InterceptorBinding not found' error -->
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-javadoc-plugin</artifactId>
	            <!-- <version>3.0.0</version> -->
	            <configuration>
	                <!-- Silence error javax.interceptor.InterceptorBinding not found -->
	                <additionalDependencies>
	                    <additionalDependency>
	                        <groupId>javax.interceptor</groupId>
	                        <artifactId>javax.interceptor-api</artifactId>
	                        <version>1.2</version>
	                    </additionalDependency>
	                </additionalDependencies>
	            </configuration>
	        </plugin>

		</plugins>
	</build>

<!-- 	<pluginRepositories> -->
<!-- 		<pluginRepository> -->
<!-- 			<id>spring-snapshots</id> -->
<!-- 			<name>Spring Snapshots</name> -->
<!-- 			<url>https://repo.spring.io/snapshot</url> -->
<!-- 			<snapshots> -->
<!-- 				<enabled>true</enabled> -->
<!-- 			</snapshots> -->
<!-- 		</pluginRepository> -->
<!-- 		<pluginRepository> -->
<!-- 			<id>spring-milestones</id> -->
<!-- 			<name>Spring Milestones</name> -->
<!-- 			<url>https://repo.spring.io/milestone</url> -->
<!-- 			<snapshots> -->
<!-- 				<enabled>false</enabled> -->
<!-- 			</snapshots> -->
<!-- 		</pluginRepository> -->

<!-- 		<pluginRepository> -->
<!-- 			<id>maven.oracle.com</id> -->
<!-- 			<url>https://maven.oracle.com</url> -->
<!-- 		</pluginRepository> -->

<!-- 	</pluginRepositories> -->

	<distributionManagement>
		<repository>
			<id>localRepo</id>
			<url>file:${deploy.folder}</url>
		</repository>
	</distributionManagement>

	<scm>
		<connection>scm:git:https://github.com/thalabi/FlightLogServer</connection>
		<developerConnection>scm:git:https://github.com/thalabi/FlightLogServer</developerConnection>
	  <tag>HEAD</tag>
	</scm>
</project>
